--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/common": "2.0.2",
+    "@angular/compiler": "2.0.2",
+    "@angular/core": "2.0.2",
+    "@angular/forms": "2.0.2",
+    "@angular/http": "2.0.2",
+    "@angular/material": "^2.0.0-alpha.9-3",
+    "@angular/platform-browser": "2.0.2",
+    "@angular/platform-browser-dynamic": "2.0.2",
     "@angular/router": "3.0.0",
+    "@types/request": "0.0.30",
     "angularfire2": "^2.0.0-beta.5",
     "core-js": "^2.4.1",
     "firebase": "^3.4.1",
